--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               </div>
               <div class="hidden md:flex items-center space-x-8">
                   <a href="#experiments" class="text-gray-300 hover:text-white transition-colors">Experiments</a>
-                  <a href="https://github.com/autolearnai/autolearn" target="_blank" class="bg-emerald-600 px-4 py-2 rounded-lg font-medium hover:bg-emerald-700 transition-all duration-200">
+                  <a href="https://github.com/autolearnai" target="_blank" class="bg-emerald-600 px-4 py-2 rounded-lg font-medium hover:bg-emerald-700 transition-all duration-200">
                       GitHub
                   </a>
               </div>
@@ -216,7 +216,7 @@
               Join us in exploring the future of self-improving AI agents.
             </p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
-              <a href="https://github.com/autolearnai/autolearn" target="_blank" class="bg-emerald-600 px-8 py-4 rounded-xl font-semibold text-lg hover:bg-emerald-700 transition-all duration-200 shadow-lg hover:shadow-emerald-500/25">
+              <a href="https://github.com/autolearnai" target="_blank" class="bg-emerald-600 px-8 py-4 rounded-xl font-semibold text-lg hover:bg-emerald-700 transition-all duration-200 shadow-lg hover:shadow-emerald-500/25">
                   View on GitHub
               </a>
               <a href="#experiments" class="border border-gray-600 px-8 py-4 rounded-xl font-semibold text-lg hover:bg-gray-800 hover:border-gray-500 transition-all duration-200">
@@ -250,7 +250,7 @@
                 <div>
                     <h4 class="font-semibold mb-4">Developers</h4>
                     <div class="space-y-2 text-gray-400">
-                        <a href="https://github.com/autolearnai/autolearn" target="_blank" class="block hover:text-white transition-colors">GitHub</a>
+                        <a href="https://github.com/autolearnai" target="_blank" class="block hover:text-white transition-colors">GitHub</a>
                     </div>
                 </div>
             </div>
